--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>GOS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>window.__INITIAL__DATA__ = JSON.stringify({ name })</script>
 </head>
 <body class="flow-wrapper--column">
 <h2>Dashboard</h2>
@@ -35,5 +36,7 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
 </script>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
 </body>
 </html>
